--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 @import url('https://fonts.googleapis.com/css?family=Oswald|Lato:300');
 
 *{
-    /* margin: 0;
+    margin: 0; 
     padding: 0;
-    border: 0; */
+    border: 0; 
 }
 
 body {
@@ -12,12 +12,73 @@ body {
 }
 
 h2 {
+    margin-left: 30px;
     font-family: oswald;
     text-transform: uppercase;
     letter-spacing: 3px;
     color: black;
+    /* change to white text */
 }
 
 #logo {
-    
+    float: left;
+    font-size: 300%;
 }
+
+#menu {
+    font-size: 120%;
+    list-style-type: none;
+    letter-spacing: 3px;
+}
+
+#menu li {
+    float: right;
+    margin-right: 30px;
+}
+
+#menu a {
+    text-decoration: none;
+    color: black;
+    /* change text to white */
+}
+
+#logo, #menu {
+    line-height: 75px;
+}
+
+#menu a:hover {
+    border-bottom: 1px solid black;
+}
+
+.active {
+    border-bottom: 1px solid black;
+}
+
+#hero-outer {
+    height: 37.5rem;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+#hero-image {
+    height: 37.5rem;
+    width: 100%;
+    background: url("../images/hero-image.jpg");
+    /* add animation to image */
+}
+
+#welcome-text h2 {
+    letter-spacing: 0.25rem;
+    padding: 2.5rem;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: whitesmoke;
+    text-transform: uppercase
+}
+
+
+
