--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,53 +6,7 @@
     border: 0; 
 }
 
-body {
-    font-family: lato;
-    color: #777777;
-}
 
-h2 {
-    margin-left: 30px;
-    font-family: oswald;
-    text-transform: uppercase;
-    letter-spacing: 3px;
-    color: black;
-    /* change to white text */
-}
-
-#logo {
-    float: left;
-    font-size: 300%;
-}
-
-#menu {
-    font-size: 120%;
-    list-style-type: none;
-    letter-spacing: 3px;
-}
-
-#menu li {
-    float: right;
-    margin-right: 30px;
-}
-
-#menu a {
-    text-decoration: none;
-    color: black;
-    /* change text to white */
-}
-
-#logo, #menu {
-    line-height: 75px;
-}
-
-#menu a:hover {
-    border-bottom: 1px solid black;
-}
-
-.active {
-    border-bottom: 1px solid black;
-}
 
 #hero-outer {
     height: 37.5rem;
@@ -68,7 +22,7 @@ h2 {
     /* add animation to image */
 }
 
-#welcome-text h2 {
+#welcome-text h1 {
     letter-spacing: 0.25rem;
     padding: 2.5rem;
     position: absolute;
@@ -81,4 +35,118 @@ h2 {
 }
 
 
+.fixed-top {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 1030;
+}
+
+
+.bg-dark {
+    background-color: #212224 !important;
+    
+}
+
+.navbar {
+    position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    padding: .5rem 1rem;
+}
+
+.navbar-dark .navbar-nav .nav-link {
+    color: #fafafa;
+}
+
+#info {
+    background-image: ;
+    text-align: center;
+    display: inline-flexbox;
+}
+
+footer {
+    height: 150px;
+}
+
+.socials {
+    text-align: center;
+}
+
+.socials li {
+   display: inline; 
+}
+
+.socials i {
+    font-size: 150%;
+    margin: 1%;
+    padding: 5%;
+    color: #212224;
+}
+
+.row {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    margin-right: -15px;
+    margin-left: -15px;
+    padding-top: 70px;
+}
+
+.btn:not(:disabled):not(.disabled) {
+    cursor: pointer;
+}
+.btn-secondary {
+    color: #fff;
+    background-color: #212224;
+    border-color: #212224;
+}
+.btn {
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+}
+
+.divider {
+    border: none;
+    height: 5px;
+    color: #212224;
+    background-color: #212224;
+    padding-bottom: 5px;
+  }
+
+  body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #212529;
+    text-align: right;
+    background-color: #fff;
+}
 
