--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,6 +64,7 @@
     -ms-flex-pack: justify;
     justify-content: space-between;
     padding: .5rem 1rem;
+    
 }
 
 .navbar-dark .navbar-nav .nav-link {
@@ -104,6 +105,7 @@
     -webkit-box-align: center;
     -ms-flex-align: center;
     align-items: center;
+    justify-content: flex-end;
 }
 
 /* Body */
@@ -135,7 +137,7 @@ button, input {
     display: flex;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    margin-right: -15px;
+    margin-right: 0px;
     margin-left: -15px;
     padding-top: 70px;
 }
