add 404 error page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -350,7 +350,15 @@ img {
   margin: 2% 8%;
   border: none;
 }
+ /* 404 */
 
+.contain {
+    text-align: center;
+}
+
+.error-img {
+    width: 43%;
+}
 
 
 /* Footer */
