--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -212,7 +212,7 @@ p {
 *, ::after, ::before {
     box-sizing: border-box;
 }
-user agent stylesheet
+
 p {
     display: block;
     margin-block-start: 1em;
@@ -302,60 +302,63 @@ img {
   
 /* Contact */
 
-.containers {
-    background: #FFFFFF;
-    width: 900px;
-    height: 650px;
-    margin: 5% auto;
-    position: relative;
-  }
+#contact{
+    background-color:#fff;
+    font:
+-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
 
-.containers .map {
-  width: 45%;
-  float: left;
+.container h4 {
+    text-align: center;
 }
-.containers .contact-form {
-  width: 53%;
-  margin-left: 2%;
-  float: left;
+
+#contact .well{
+    margin-top:30px;
+    border-radius:0;
+    text-align: center;
 }
-.containers .contact-form .title {
-  font-size: 2.5em;
-  font-family: "Roboto", sans-serif;
-  font-weight: 700;
-  color: #242424;
-  margin: 5% 8%;
-  text-align: center;
-  padding-left: 50px;
+
+#contact .well p {
+    text-align: center;
 }
-.containers .contact-form .subtitle {
-  font-size: 1.2em;
-  font-weight: 400;
-  margin: 0 4% 5% 8%;
-  text-align: center;
-  padding-left: 50px;
+
+#contact .form-control{
+    border-radius: 1;
+    border:2px solid #1e1e1e;
 }
-.containers .contact-form input,
-.containers .contact-form textarea {
-  width: 330px;
-  padding: 3%;
-  margin: 2% 8%;
-  color: #242424;
-  border: 1px solid #B7B7B7;
+
+#contact button {
+background: #212224;
+width: 180px;
+height: 60px;
+font-weight: 700;
+margin: 5% 8%;
+border: none;
+color: #fff;
 }
-.containers .contact-form input::placeholder,
-.containers .contact-form textarea::placeholder {
-  color: #242424;
+
+.form-control {
+    display: block;
+    width: 100%;
+    padding: .375rem .50rem;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 2;
+    padding-top: 10px;
+    
 }
-.containers .contact-form .btn-send {
-  background: #212224;
-  width: 180px;
-  height: 60px;
-  color: #FFFFFF;
-  font-weight: 700;
-  margin: 2% 8%;
-  border: none;
+
+#contact .row{
+    margin-bottom:30px;
 }
+
+@media (max-width: 768px) { 
+    #contact iframe {
+        margin-bottom: 15px;
+    }
+    
+}
+
  /* 404 */
 
 .contain {
