--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,6 @@
     height: 37.5rem;
     width: 100%;
     background: url("../images/hero-image.jpg");
-    /* add animation to image */
 }
 
 #welcome-text h1 {
@@ -69,6 +68,11 @@
 
 .navbar-dark .navbar-nav .nav-link {
     color: #fafafa;
+}
+
+.navbar-dark .navbar-nav .nav-link:hover {
+    background-color: #fff;
+    color: #212224;
 }
 
 .navbar-toggler:not(:disabled):not(.disabled) {
@@ -186,10 +190,10 @@ button, input {
     line-height: 1.5;
     color: #212529;
     text-align: right;
-    background-color: #fff;
+    background-color: #FAF9F6;
 }
 
-#page-heading h2{
+#page-heading h1{
     text-align: center;
     padding-top: 10px;
 }
@@ -248,6 +252,7 @@ img {
     overflow: clip;
 }
 
+
 /* Gallery */
   
   
@@ -302,7 +307,7 @@ img {
 /* Contact */
 
 #contact{
-    background-color:#fff;
+    background-color:#FAF9F9;
     font:
 -family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
@@ -352,12 +357,13 @@ color: #fff;
     margin-bottom:30px;
 }
 
-@media (max-width: 768px) { 
-    #contact iframe {
-        margin-bottom: 15px;
-    }
-    
+.iframe {
+    width: 500px;
+    height: 500px;
+    border: none;
 }
+
+
 
  /* 404 */
 
@@ -438,3 +444,9 @@ footer {
         max-width: 41.666667%;
     }
 }
+
+@media (max-width: 768px) { 
+    #contact iframe {
+        margin-bottom: 15px;
+    }
+    
